Prevent widget overflow

--- a/app/assets/stylesheets/dashboards.css.scss
+++ b/app/assets/stylesheets/dashboards.css.scss
@@ -62,6 +62,7 @@ $light-secondary-background: #f0f0f0;
   padding: 5px;
   position: relative;
   width: 100%;
+  overflow: hidden;
 }
 
 .widget_column {
